--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ body {
 }
 .box input {
     margin: 10px;
-    width: 69%;
+    width: 63%;
     height: 27px;
     border-radius: 25px;
     outline: none;
     border: 3px solid brown;
-    padding: 10px;
+    padding: 10px 30px;
     font-size: 20px;
 }
 .add {
