--- a/style.css
+++ b/style.css
@@ -3,19 +3,22 @@
     margin: 0;
 }
 body {
+    background-image: url("./img/img.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: aquamarine;
     flex-wrap: wrap;
     overflow: hidden;
 }
 .box {
     width: 500px;
     height: 500px;
-    background-color: rgb(232, 127, 255);
+    backdrop-filter: blur(3px);
     border-radius: 10px;
     box-shadow: 1px 1px 5px 3px rgba(85, 85, 85, .4);
     display: flex;
@@ -35,7 +38,9 @@ body {
     outline: none;
     border: 3px solid brown;
     padding: 10px 30px;
+    color: #FFF;
     font-size: 20px;
+    background: none;
 }
 .add {
     padding: 13px 25px;
